--- a/assets/views/livebox.ejs
+++ b/assets/views/livebox.ejs
@@ -1,7 +1,7 @@
 <!-- box-->
 <div class="box box-primary" data-ng-controller="liveboxCtrl as vm" ng-init="vm.init(<%= boxId %>);">
     <div class="box-header with-border">
-      <h3 class="box-title">Default Box Example</h3>
+      <h3 class="box-title">Livebox TV"</h3>
     </div>
     <div class="box-body">
       The body of the box
