--- a/livebox.ejs
+++ b/livebox.ejs
@@ -10,7 +10,7 @@
       <button type="button" class="btn btn-box-tool dropdown-toggle" data-toggle="dropdown">
         <i class="fa fa-bars"></i></button>
       <ul class="dropdown-menu pull-right" role="menu">
-        <li ng-repeat="device in vm.devices" class="ng-cloak"><a ng-click="vm.selectDevice(device);">{{device.name}}</a></li>
+        <li ng-repeat="device in vm.devices track by device.id" class="ng-cloak"><a ng-click="vm.selectDevice(device);">{{device.name}}</a></li>
       </ul>
     </div>
   </div>
@@ -18,8 +18,7 @@
     <div ng-show="vm.deviceId" class="container-fluid ng-cloak" style="height:250px; overflow:auto">
       <div class="row-fluid justify-content-center align-items-center">
         <div class="col-xs-4 col-sm-3 col-md-2 text-center" ng-repeat="channel in vm.channels">
-          <img class="btn btn-default" ng-src="{{channel.url}}" alt="{{channel.name}}" ng-click="vm.pressKey(channel.epg)"
-            style="cursor:pointer; max-width: 100%; height: auto; padding: 5px; margin: 5px">
+          <img class="btn btn-default" ng-src="{{channel.url}}" alt="{{channel.name}}" ng-click="vm.pressKey(channel.epg)" style="cursor:pointer; max-width: 100%; height: auto; padding: 5px; margin: 5px">
         </div>
       </div>
     </div>
@@ -31,7 +30,7 @@
       <div class="row">
         <div class="col-xs-offset-2 col-xs-6">
           <select ng-model="vm.selectedDevice" class="form-control" class="ng-cloak">
-            <option ng-repeat="device in vm.devices" value="{{device}}">{{device.name}}</option>
+            <option ng-repeat="device in vm.devices track by device.id" value="{{device}}">{{device.name}}</option>
           </select>
         </div>
         <div class="col-xs-2"> <button class="btn btn-success btn-flat" ng-click="vm.selectDevice(vm.selectedDevice);">
