--- a/views/configuration.ejs
+++ b/views/configuration.ejs
@@ -1,6 +1,6 @@
 <script src="/hooks/livebox/js/livebox.controller.js"></script>
 
-<div data-ng-controller="liveboxCtrl as vm">
+<div data-ng-controller="liveboxCtrl as vm" ng-init="vm.init(<%= module.id %>, '<%= module.slug %>');">
   <div class="box skin-box box-default no-border ng-cloak">
     <div class="box-header with-border">
       <h3 class="box-title">Adresse IP du décodeur Livebox</h3>
@@ -16,10 +16,8 @@
   </div>
   <div class="form-group">
     <div class="btn-group">
-      <button type="button" ng-click="vm.saveParams()" class="btn btn-primary btn-flat btn-sm dropdown-toggle"
+      <button type="button" ng-click="vm.saveParams()" class="btn btn-primary btn-flat btn-sm"
         aria-expanded="false">Configuration</button>
     </div>
   </div>
-</div>
-
 </div>
