cleaning code, remove control.log

--- a/views/configuration.ejs
+++ b/views/configuration.ejs
@@ -16,8 +16,7 @@
   </div>
   <div class="form-group">
     <div class="btn-group">
-      <button type="button" ng-click="vm.saveParams()" class="btn btn-primary btn-flat btn-sm"
-        aria-expanded="false">Configuration</button>
+      <button type="button" ng-click="vm.saveParams()" class="btn btn-primary btn-flat btn-sm" aria-expanded="false">Configuration</button>
     </div>
   </div>
 </div>
