change name img, minimified js

--- a/livebox.ejs
+++ b/livebox.ejs
@@ -1,4 +1,5 @@
 <!-- box-->
+<script src="/hooks/livebox/js/livebox.box.controller.minimified.js"></script>
 <div class="box box-primary" data-ng-controller="liveboxboxCtrl as vm" ng-init="vm.init(<%= boxId %>);">
   <div class="box-header with-border">
     <span><i class="fa fa-television"></i></span>
