--- a/views/configuration.ejs
+++ b/views/configuration.ejs
@@ -1,4 +1,4 @@
-<script src="/hooks/livebox/js/livebox.controller.js"></script>
+<script src="/hooks/livebox/js/livebox.controller.minimified.js"></script>
 
 <div data-ng-controller="liveboxCtrl as vm" ng-init="vm.init(<%= module.id %>, '<%= module.slug %>');">
   <div class="box skin-box box-default no-border ng-cloak">
